Fix overflow | Adjust card

--- a/public/global.css
+++ b/public/global.css
@@ -27,6 +27,7 @@
 
 html, body {
 	position: relative;
+	overflow-x: hidden;
 	width: 100vw;
 	height: 100vh;
 }
